BIG commit. Completed, like, 85% of UI and linked activities. TODO: Add animal fun facts on animal activities TODO: Add animal noises on animal activities TODO: Somehow center name + volume icon on animal activities TODO: Create randomized radio-button quiz questions TODO: Possibly add count-up timer to time quiz completion TODO: Implement SubmitActivity to show score (and maybe time) TODO: Add some sort of image animation (e.g., animal jumps when noise is playing) if there's extra time to appease Mahe's creativity standards????

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">BarnyardLearn</string>
+    <string name="app_name"><b>Barnyard Learn</b></string>
+    <string name="learn">Learn</string>
+    <string name="quiz">Quiz</string>
+    <string name="back">Back</string>
+    <string name="submit">Submit</string>
+    <string name="main_menu">Main Menu</string>
+    <string name="click_animals">Click an animal to learn more!</string>
+
+    <string name="cow">Cow</string>
+    <string name="pig">Pig</string>
+    <string name="chicken">Chicken</string>
+    <string name="horse">Horse</string>
+    <string name="goat">Goat</string>
+    <string name="sheep">Sheep</string>
 </resources>
